--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -1,9 +1,14 @@
-uploading_path=/Users/sunguolu/Desktop/logger/
-write_path=/Users/sunguolu/Desktop/logger/
-#uploading_path=/userDatas/uploadFile/
-#write_path=/userDatas/
+#uploading_path=/Users/sunguolu/Desktop/logger/
+#write_path=/Users/sunguolu/Desktop/logger/
+#download_path=/Users/sunguolu/Desktop/\u6587\u6863/
+#download_name=2019\u5E74\u5916\u5305\u5458\u5DE5\u9A7B\u573A\u5DE5\u4F5C\u987B\u77E5(\u66F4\u65B0).pdf
+uploading_path=/userDatas/download
+write_path=/userDatas/
+download_path=userDatas.XLSX
+download_name=\u4F1A\u8BAE\u5BA3\u4F20\u518C.pdf
 file_name=userDatas.XLSX
 file_article_name=userArticleDatas.XLSX
+
 
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
